kubernetes/op-scim-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: canada-bridge

---

apiVersion: v1
kind: Namespace
metadata:
  name: usa-bridge
