kubernetes/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: op-scim-redis
  namespace: scim-1
spec:
  selector:
    matchLabels:
      app: op-scim-redis
  replicas: 1
  template:
    metadata:
      labels:
        app: op-scim-redis
    spec:
      containers:
        - name: op-scim-redis
          image: redis:latest
          ports:
            - containerPort: 6379
              name: redis
          resources:
            requests:
              cpu: 125m
              memory: 256M
            limits:
              cpu: 250m
              memory: 512M
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: op-scim-redis
  namespace: scim-2
spec:
  selector:
    matchLabels:
      app: op-scim-redis
  replicas: 1
  template:
    metadata:
      labels:
        app: op-scim-redis
    spec:
      containers:
        - name: op-scim-redis
          image: redis:latest
          ports:
            - containerPort: 6379
              name: redis
          resources:
            requests:
              cpu: 125m
              memory: 256M
            limits:
              cpu: 250m
              memory: 512M
