kubernetes/op-scim-service.yaml
# Adjust metadata.namespace values to taste for both resources defined in this file. 
apiVersion: v1
kind: Service
metadata:
  name: op-scim-bridge
  namespace: scim-1 # ADJUST to taste
  labels:
    app: op-scim-bridge
spec:
  type: ClusterIP
  ports:
    # Use this port in the standard configuration to terminate TLS at the SCIM
    # bridge container using Let's Encrypt
    # - protocol: TCP
    #   name: https
    #   port: 443
    #   targetPort: https
    # Use this port when terminating TLS in front of the SCIM bridge to listen
    # for unencrypted traffic redirected from a reverse proxy or load balancer
    - protocol: TCP
      name: http
      port: 80
      targetPort: http
  selector:
    app: op-scim-bridge

---

apiVersion: v1
kind: Service
metadata:
  name: op-scim-bridge
  namespace: scim-2 # ADJUST to taste
  labels:
    app: op-scim-bridge
spec:
  type: ClusterIP
  ports:
    # Use this port in the standard configuration to terminate TLS at the SCIM
    # bridge container using Let's Encrypt
    # - protocol: TCP
    #   name: https
    #   port: 443
    #   targetPort: https
    # Use this port when terminating TLS in front of the SCIM bridge to listen
    # for unencrypted traffic redirected from a reverse proxy or load balancer
    - protocol: TCP
      name: http
      port: 80
      targetPort: http
  selector:
    app: op-scim-bridge
