kubernetes/redis-service.yaml
# Adjust metadata.namespace values to taste for both resources defined in this file. 

apiVersion: v1
kind: Service
metadata:
  name: op-scim-redis
  namespace: scim-1 # ADJUST to taste
  labels:
    app: op-scim-redis
spec:
  ports:
    - port: 6379
      targetPort: redis
  selector:
    app: op-scim-redis

---

apiVersion: v1
kind: Service
metadata:
  name: op-scim-redis
  namespace: scim-2 # ADJUST to taste
  labels:
    app: op-scim-redis
spec:
  ports:
    - port: 6379
      targetPort: redis
  selector:
    app: op-scim-redis
