kubernetes/op-scim-ingress.yaml
# Adjust metadata.namespace values to taste
# Adjust spec.rules.host and spec.tls.hosts for both Ingress resources in this file. 
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: op-scim-ingress
  namespace: scim-1 # Adjust namespace name accordingly
  annotations:
    # Use the Issuer resource from `./cert-manager-issuer.yaml` to issue a TLS
    # certificate
    cert-manager.io/cluster-issuer: letsencrypt-nginx
spec:
  ingressClassName: nginx
  rules:
  # Change to the DNS record pointing to the Ingress controller - this must
  #  exactly match the `hosts` in the `tls` section below
  - host: scim-1.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: op-scim-bridge
            port:
              # Target the `http` port of the Service
              name: http
  tls:
    - hosts:
      # Change to the DNS record pointing to the Ingress controller - this must
      # exactly match the `host` in the `rules` section above
      - scim-1.example.com
      # Arbitrary name for the TLS secret
      secretName: letsencrypt-nginx-scim

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: op-scim-ingress
  namespace: scim-2 # Adjust namespace name accordingly
  annotations:
    # Use the Issuer resource from `./cert-manager-issuer.yaml` to issue a TLS
    # certificate
    cert-manager.io/cluster-issuer: letsencrypt-nginx
spec:
  ingressClassName: nginx
  rules:
  # Change to the DNS record pointing to the Ingress controller - this must
  #  exactly match the `hosts` in the `tls` section below
  - host: scim-2.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: op-scim-bridge
            port:
              # Target the `http` port of the Service
              name: http
  tls:
    - hosts:
      # Change to the DNS record pointing to the Ingress controller - this must
      # exactly match the `host` in the `rules` section above
      - scim-2.example.com
      # Arbitrary name for the TLS secret
      secretName: letsencrypt-nginx-scim
